--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
+title: Pawan Bharadwaj's Blog.
 description: I am Pawan Bharadwaj, fill later. 
 github_username: pawanbharadwaj
 
